# Copyright (c) Open Enclave SDK contributors.
# Licensed under the MIT License.

include(${PROJECT_SOURCE_DIR}/cmake/get_testcase_name.cmake)

option(ENABLE_FULL_LIBCXX_TESTS "Build all libcxx tests and include in test list" OFF)
if (ENABLE_FULL_LIBCXX_TESTS)
    message("ENABLE_FULL_LIBCXX_TESTS set - building all libcxx tests")
else()
    message("ENABLE_FULL_LIBCXX_TESTS not set - building some libcxx tests")
endif()

option(LVI_MITIGATION_SKIP_TESTS "Skip all tests with LVI mitigation" OFF)
if (LVI_MITIGATION MATCHES ControlFlow AND LVI_MITIGATION_SKIP_TESTS)
    message("LVI_MITIGATION_SKIP_TESTS set - skip all tests with LVI mitigation")
endif()

add_subdirectory(mem)
add_subdirectory(safecrt)
add_subdirectory(safemath)
add_subdirectory(str)
add_subdirectory(logging)
add_subdirectory(tools)

if (WIN32)
    add_subdirectory(win_paths)
endif()

if (OE_SGX)
    add_subdirectory(debugger)
    add_subdirectory(host_verify)
    add_subdirectory(switchless)
    add_subdirectory(switchless_threads)
    add_subdirectory(switchless_nestedcalls)
endif()

if (UNIX OR ADD_WINDOWS_ENCLAVE_TESTS OR USE_CLANGW)
    if (OE_SGX)
        if (BUILD_ENCLAVES)
            # Disable the memory test for the scenario of building the enclave in Linux and running
            # it on Windows because of the mismatch on the enclave heap size configuration.
            add_subdirectory(memory)
            add_subdirectory(tls_e2e)
        endif()

        add_subdirectory(abortStatus)
        add_subdirectory(argv)
        add_subdirectory(atexit)
        add_subdirectory(attestation_cert_apis)
        add_subdirectory(attestation_plugin)
        add_subdirectory(backtrace)
        add_subdirectory(bigmalloc)
        add_subdirectory(child_thread)
        add_subdirectory(cppException)
        add_subdirectory(create-rapid)
        add_subdirectory(crypto_crls_cert_chains)
        add_subdirectory(debug-mode)
        add_subdirectory(ecall)
        add_subdirectory(ecall_ocall)
        add_subdirectory(echo)
        add_subdirectory(enclaveparam)
        add_subdirectory(file)
        add_subdirectory(getenclave)
        add_subdirectory(ocall)
        add_subdirectory(libcxx)
        add_subdirectory(libcxxrt)
        add_subdirectory(libunwind)
        add_subdirectory(mbed)
        add_subdirectory(ocall-create)
        add_subdirectory(oeedger8r)
        add_subdirectory(print)
        add_subdirectory(props)
        add_subdirectory(qeidentity)
        add_subdirectory(report)
        add_subdirectory(SampleApp)
        add_subdirectory(SampleAppCRT)
        add_subdirectory(sealKey)
        add_subdirectory(stdc)
        add_subdirectory(stdcxx)
        add_subdirectory(syscall)
        add_subdirectory(thread)
        add_subdirectory(threadcxx)
        add_subdirectory(thread_local)
        add_subdirectory(thread_local_no_tdata)
        add_subdirectory(VectorException)
        add_subdirectory(stack_smashing_protector)
    endif()

add_subdirectory(c99_compliant)
add_subdirectory(create-errors)
add_subdirectory(crypto)
add_subdirectory(hexdump)
add_subdirectory(hostcalls)
add_subdirectory(initializers)
add_subdirectory(mixed_c_cpp)
add_subdirectory(pingpong)
add_subdirectory(pingpong-shared)
endif()

if ( UNIX )
    if (OE_SGX)
        add_subdirectory(child_process)
        add_subdirectory(cmake_name_conflict)
    endif()
add_subdirectory(libc)
endif()
